--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,12 @@
             android:enabled="true"
             android:exported="true" />
 
+        <service android:name=".MyInstanceIdService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+
         <activity
             android:name="tw.idv.poipoi.pdcs.LoginActivity"
             android:label="@string/title_activity_login"></activity>
