--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,6 @@
         android:glEsVersion="0x00020000"
         android:required="true" />
 
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-
     <application
         android:name="tw.idv.poipoi.pdcs.Core"
         android:allowBackup="true"
@@ -30,16 +25,23 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="tw.idv.poipoi.pdcs.MainActivity"
+            android:name="tw.idv.poipoi.pdcs.LoginActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTop"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="tw.idv.poipoi.pdcs.MainActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
         <activity
             android:name="tw.idv.poipoi.pdcs.MapsActivity"
             android:label="@string/title_activity_maps"
@@ -72,9 +74,13 @@
             </intent-filter>
         </service>
 
-        <activity
-            android:name="tw.idv.poipoi.pdcs.LoginActivity"
-            android:label="@string/title_activity_login"></activity>
+        <service
+            android:name=".MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
