--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,14 +18,14 @@
         android:required="true" />
 
     <application
-        android:name="tw.idv.poipoi.pdcs.Core"
+        android:name=".Core"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="tw.idv.poipoi.pdcs.LoginActivity"
+            android:name=".LoginActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop">
             <intent-filter>
@@ -34,18 +34,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name="tw.idv.poipoi.pdcs.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="tw.idv.poipoi.pdcs.MapsActivity"
+            android:name=".MapsActivity"
             android:label="@string/title_activity_maps"
-            android:parentActivityName="tw.idv.poipoi.pdcs.MainActivity" />
+            android:parentActivityName=".MainActivity" />
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -64,22 +61,26 @@
             android:value="@string/google_maps_key" />
 
         <service
-            android:name="tw.idv.poipoi.pdcs.CareService"
+            android:name=".CareService"
             android:enabled="true"
             android:exported="true" />
-
         <service android:name=".MyInstanceIdService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
-
-        <service
-            android:name=".MyFirebaseMessagingService">
+        <service android:name=".MyFirebaseMessagingService">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
+        <activity
+            android:name=".AlertActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait" />
 
     </application>
 
