--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,9 @@
             android:name=".CareService"
             android:enabled="true"
             android:exported="true" />
+        <service
+            android:name=".HelpService"
+            android:enabled="true" />
         <service android:name=".MyInstanceIdService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
@@ -79,9 +82,10 @@
             android:name=".AlertActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="portrait" />
-
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".HelpActivity"
+            android:launchMode="singleTask"/>
     </application>
 
 </manifest>
